syntax = "proto3";

package customers;

service CustomersService {
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
  rpc ValidateCustomer (ValidateCustomerRequest) returns (ValidateCustomerResponse);
}

message GetCustomerRequest {
  int32 id = 1;
}

message ValidateCustomerRequest {
  int32 id = 1;
}

message Address {
  int32 id = 1;
  string street = 2;
  string number = 3;
  string complement = 4;
  string neighborhood = 5;
  string city = 6;
  string state = 7;
  string zipCode = 8;
  bool isPrimary = 9;
  int32 customerId = 10;
  string createdAt = 11;
}

message CustomerResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  bool isPremium = 5;
  repeated Address addresses = 6;
  string error = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message ValidateCustomerResponse {
  bool isValid = 1;
  string message = 2;
  CustomerResponse customer = 3;
}